# UCF-Senior-Design-Group-2

./: .gitignore  README.md  SDF.ui
GUI Visual Studio Project/: PointModule.py  SDF Project.pyproj  SDF.ui  Testing.py  Testing.pyproj  Testing.sln  UIModule.py  VectorModule.py  angle.py  angleDialog.py  changeColorDialog.py  deletePointDialog.py  deleteVectorDialog.py  editAngleDialog.py  editPointDialog.py  editVectorDialog.py  gui.py  mesing around.py  pdwithzoom.py  photoDisplayer.py  photoDisplayerContainer.py  point.py  pointDialog.py  real.py  test.SDFDATA  vector.py  vectorDialog.py
GUI_Visual_Studio_Project/: .#depthProvider.py  .gitignore  MagPopup.py  README.org  SDF Project.pyproj  angle.py  changeColorDialog.py  colorSelector.py  dataTable.py  deleteAngleDialog.py  deletePointDialog.py  deleteVectorDialog.py  depthProvider.py  editAngleDialog.py  editParametersDialog.py  editPointDialog.py  gui.py  hyperParameterTuning.py  parameterDialog.py  photoDisplayer.py  photoDisplayerContainer.py  point.py  pointDialog.py  real.py  test.py  vector.py
data/: .gitignore  data.py
depth/: .gitignore  README.org  bundle_adjustment.py  cloud.py  depth.py  disparity.py  matching.py  util.py
depth2/: .gitignore  CMakeLists.txt  compile_commands.json  pyproject.toml  setup.py  test.out  test.py  test2.py
depth2/include/: calib.h  depth.h  matching.h  types.h
depth2/include/common/: math.h  util.h
depth2/src/: calib.cpp  depth.cpp  main.cpp  matching.cpp
depth2/src/depth_algo/: __init__.py
docs/: building.org  depth.org
test/: test_kitti.py  test_tsukuba.py
